Updated portfolio with new pictures and improved layout

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!-- Right: image -->
         <div class="home-visual">
             <div class="hero-img-wrap">
-                <img src="images/wallpaper.png" alt="Mabutsi Kgaogelo Kgagara">
+                <img src="images/profile.png" alt="Mabutsi Kgaogelo Kgagara">
                 <div class="hero-img-ring"></div>
             </div>
             <div class="float-chip chip-a"><i class="bx bxl-java"></i> Java Dev</div>
